--- a/leetcode metrics/style.css
+++ b/leetcode metrics/style.css
@@ -2,17 +2,22 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
-
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
 }
 
 body{
-    background-color: rgb(60, 59, 62);
-    color: white;
-    height: 100vh;
+    color: white ;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
+    background:
+      linear-gradient(rgba(15,23,42,0.85), rgba(15,23,42,0.85)),
+      url("https://plus.unsplash.com/premium_photo-1664297895841-132ba85a5242");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 
 }
 
@@ -20,16 +25,21 @@ body{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background-color: rgb(128, 124, 126);
     padding: 20px;
-    border-radius: 5px;
-    width: 50%;
+    width: 90%;
     max-width: 600px;
-    
+     box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+     background: rgba(30, 41, 59, 0.85);
+    backdrop-filter: blur(10px);
+    border-radius: 12px;
 }
 
 h1{
     font-size: 2rem;
+    text-align: center;
+    letter-spacing: 1px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 800;
 }
 
 .user-container{
@@ -43,44 +53,74 @@ h1{
 .user-input-container{
     display: flex;
     justify-content: space-between;
-
 }
 
 #user-input{
     width: 80%;
     padding: 0.4rem;
     border-radius: 5px;
+    border: 2px solid rgb(59, 55, 49);
+    background-color: #f2f2f2;
+    font-size: 1rem;
 }
 
-#serch-button{
-    padding: 6rem;
-    border-radius: 5px;
+#user-input:focus {
+    outline: none;
+    border-color: #6c63ff;
+    box-shadow: 0 0 6px rgba(108,99,255,0.6);
+}
+
+#search-button{
+    padding: 0.5rem 1.2rem;
+    background-color: #6c63ff;
+    color: white;
+    border: 1px solid blueviolet;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#search-button:hover {
+    background-color: #574bdb;
+    transform: scale(1.05);
 }
 
 .circle{
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    border: 4px solid rgb(34, 34, 173);
+    border: 4px solid rgb(6, 19, 114);
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 16px;
-    color: white;
+    color: rgb(237, 237, 237);
     font-weight: 700;
-    background: conic-gradient(#ab97f2 var(--progress-degree, 0%), #8f57ff 0%);
+    background: conic-gradient(#a69dfa var(--progress-degree, 0%), #814ce3 0%);
+}
+
+.circle::before {
+    content: "";
+    position: absolute;
+    width: 85px;
+    height: 85px;
+    border-radius: 50%;
+    background-color: rgba(30, 41, 59, 0.9);;
+    z-index: 1;
 }
 
 .circle span{
     position: relative;
     z-index: 2;
+    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.8);;
+    color: #ffffff;
 }
 
 .progress{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    flex: wrap;
+    flex-wrap: wrap;
     gap: 10px;
 }
